refactor: adjust window dimensions and improve button accessibility; update CSS for layout and background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><link rel="stylesheet" href="style.css"></head>
 <body>
     <div id="drag-region" style="-webkit-app-region: drag; padding: 10px; background: #333; color: white; display: flex; justify-content: space-between;">
-        <span>Focus</span><button onclick="window.close()" style="-webkit-app-region: no-drag; cursor: pointer;">×</button>
+        <span>Focus</span><button id="close-btn" onclick="window.close()">×</button>
     </div>
     <div class="container" style="padding: 20px; background: rgba(255,255,255,0.95); height: 100vh;">
         <input type="text" id="taskInput" placeholder="New Task..." style="width: 70%; padding: 5px;">
