--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" href="style.css"></head>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
+
     <div id="drag-region" style="-webkit-app-region: drag; padding: 10px; background: #333; color: white; display: flex; justify-content: space-between;">
-        <span>Focus</span><button id="close-btn" onclick="window.close()">×</button>
+        <span>Focus</span>
+        <button id="close-btn" onclick="window.close()">×</button>
     </div>
-    <div class="container" style="padding: 20px; background: rgba(255,255,255,0.95); height: 50vh;">
-        <ul id="taskList">
-            <button onclick="removeTask($,{index})">Delete</button>
-        </ul>
-        <input type="text" id="taskInput" placeholder="New Task..." style="width: 70%; padding: 5px;">
-        <button onclick="addTask()">Add</button>
+
+    <div class="container" style="padding: 20px; background: rgba(255,255,255,0.95); height: 100vh; display: flex; flex-direction: column;">
         
+        <div class="input-group" style="display: flex; gap: 5px; margin-bottom: 15px;">
+            <input type="text" id="taskInput" placeholder="New Task..." style="flex: 1; padding: 8px;">
+            <button onclick="addTask()">Add</button>
+        </div>
+
+        <ul id="taskList"></ul>
+
     </div>
+
     <audio id="ding" src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
     <script src="renderer.js"></script>
 </body>
