feat: enhance task management UI with edit functionality and improved button styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div class="input-group" style="display: flex; gap: 5px; margin-bottom: 15px;">
             <input type="text" id="taskInput" placeholder="New Task..." style="flex: 1; padding: 8px;">
-            <button onclick="addTask()">Add</button>
+            <button onclick="addTask()" class="add-btn">Add</button>
         </div>
 
         <ul id="taskList"></ul>
