--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
 
         <ul id="taskList"></ul>
 
+        <div id="completed-section" style="display: none; margin-top: 20px; border-top: 1px solid #ddd; padding-top: 10px;">
+            <h4 style="margin: 0 0 10px 0; color: #888; font-size: 12px; text-transform: uppercase;">Completed</h4>
+            <ul id="completedList" style="opacity: 0.6;"></ul>
+        </div>
+
     </div>
 
-    <audio id="ding" src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
+    <audio id="ding" src="https://assets.mixkit.co/active_storage/sfx/510/510.wav"></audio>
     <script src="renderer.js"></script>
 </body>
 </html>
